Fix env settings